[package]
name = "processing"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natord = "1.0.9"

serde = { version = "1.0.163", features = ["derive"] }
numass = { git = "https://bitbucket.org/Kapot/dataforge-parser-numass.git", tag = "0.1.2" }

egui = { version = "0.22.0", optional = true }
plotly = { version = "0.8.3", optional = true }
rgb_hsv = { version = "1.0.1", optional = true }

[features]
egui = ["dep:egui"]
plotly = ["dep:plotly", "dep:rgb_hsv"]

[patch."https://bitbucket.org/Kapot/dataforge-parser-numass.git"]
numass = { path = "../dataforge-parser-numass" }