[package]
name = "processing"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natord = "1.0.9"
chrono = { version = "0.4.22", features = ["serde"] }

serde = { version = "1.0.163", features = ["derive"] }
# TODO: submit a bug report (nested pathes are not worling)
# numass = { git = "https://bitbucket.org/Kapot/dataforge-parser-numass.git", tag = "0.1.2" }
numass = { path = "../dataforge-parser-numass" }

egui = { version = "0.22.0", optional = true }
egui_extras = { version =  "0.22.0", features = ["image", "svg"], optional = true }
plotly = { version = "0.8.3", optional = true }
rgb_hsv = { version = "1.0.1", optional = true }

protobuf = "3.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.21.2", features = ["full"] }
dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3", features = ["tokio"]  }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.52"
gloo = { version = "0.10.0", features = ["net", "console", "utils", "worker", "futures"] }
dataforge = { git = "https://bitbucket.org/Kapot/dataforge-parser-rust.git", tag = "0.1.3"  }
rmp-serde = "1.1.1"
urlencoding = "2.1.3"

[features]
egui = ["dep:egui", "dep:egui_extras"]
plotly = ["dep:plotly", "dep:rgb_hsv"]

[patch."https://bitbucket.org/Kapot/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }

[patch."https://bitbucket.org/Kapot/dataforge-parser-numass.git"]
numass = { path = "../dataforge-parser-numass" }