[package]
name = "processing"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natord = "1.0.9"
chrono = { version = "0.4.22", features = ["serde"] }

serde = { version = "1.0.163", features = ["derive"] }
numass = { git = "https://github.com/kapot65/dataforge-parser-numass.git" }

egui = { version = "0.27.2", optional = true }
egui_plot = { version = "0.27.2", optional = true }
egui_extras = { version =  "0.27.2", features = ["image", "svg"], optional = true }
plotly = { version = "0.8.3", optional = true }
rgb_hsv = { version = "1.0.1", optional = true }

protobuf = "3.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.21.2", features = ["full"] }
dataforge = { git = "https://github.com/kapot65/dataforge-parser-rust.git", features = ["tokio"]  }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.52"
gloo = { version = "0.11.0", features = ["net", "console", "utils", "worker", "futures"] }
dataforge = { git = "https://github.com/kapot65/dataforge-parser-rust.git" }
rmp-serde = "1.1.1"
urlencoding = "2.1.3"
serde_json = "1.0.94"

[features]
egui = ["dep:egui", "dep:egui_plot", "dep:egui_extras"]
plotly = ["dep:plotly", "dep:rgb_hsv"]

[patch."https://github.com/kapot65/dataforge-parser-rust.git"]
dataforge = { path = "../dataforge-parser-rust" }

[patch."https://github.com/kapot65/dataforge-parser-numass.git"]
numass = { path = "../dataforge-parser-numass" }
